--- a/main.html
+++ b/main.html
@@ -8,6 +8,44 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="post">
+		
+		<label for="name">Name:</label>
+		<input type="text input" id="name" required><br><br>
+
+		<label for="email">Email:</label>
+		<input type="email input" id="email" required><br><br>
+			
+           <label>Gender:</label>
+			<input type="radio" id="gender_m" value="Male" required>
+			<label for="gender_m">Male</label>
+			<input type="radio" id="gender_f" value="Female" required>
+			<label for="gender_f">Feaml</label><br><br>
+
+			<label for="laptop">Laptop Brands</label>
+			<select id="laptop" value="laptop" required>
+				<option value="" disabled selected>--Please choose an option</option>
+				<option value="Apple">Apple</option>
+				<option value="Asus">Asus</option>
+				<option value="HP">HP</option>
+			</select><br><br>
+
+			<label for="age">Age:</label>
+			<input type="number input" id="age" required><br><br>
+
+			<label for="dob">Date Of Birth:</label>
+			<input type="date input" id="dob" required><br><br>
+
+			<label for="password">Password:</label>
+			<input type="password" id="password" required><br><br>
+
+			<label for="portfolio">Portfolio:</label>
+			<input type="url input" id="portfolio"><br><br>
+
+			<button type="submit">Submit</button>
+	</form>
+					
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
