--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
 			<input type="radio" id="gender_f" value="Female" required>
 			<label for="gender_f">Feaml</label><br><br>
 
-			<label for="laptop">Laptop Brands</label>
+			<label for="laptop">Laptop Brands:</label>
 			<select id="laptop" value="laptop" required>
 				<option value="" disabled selected>--Please choose an option</option>
 				<option value="Apple">Apple</option>
