--- a/main.html
+++ b/main.html
@@ -17,10 +17,10 @@
 		<input type="email input" id="email" required><br><br>
 			
            <label>Gender:</label>
-			<input type="radio" id="gender_m" value="Male" required>
+			<input type="radio" id="gender_m" name="Male" required>
 			<label for="gender_m">Male</label>
-			<input type="radio" id="gender_f" value="Female" required>
-			<label for="gender_f">Feaml</label><br><br>
+			<input type="radio" id="gender_f" name="Female" required>
+			<label for="gender_f">Female</label><br><br>
 
 			<label for="laptop">Laptop Brands:</label>
 			<select id="laptop" value="laptop" required>
