--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
            <label>Gender:</label>
 			<input type="radio" id="gender_m" name="Male" required>
 			<label for="gender_m">Male</label>
-			<input type="radio" id="gender_f" name="Female" required>
+			<input type="radio" id="gender_f" name="female" required>
 			<label for="gender_f">Female</label><br><br>
 
 			<label for="laptop">Laptop Brands:</label>
