--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
 		<input type="email input" id="email" required><br><br>
 			
            <label>Gender:</label>
-			<input type="radio" id="gender_m" name="Male" required>
+			<input type="radio" id="gender_m" name="male" required>
 			<label for="gender_m">Male</label>
 			<input type="radio" id="gender_f" name="female" required>
 			<label for="gender_f">Female</label><br><br>
