--- a/main.html
+++ b/main.html
@@ -19,8 +19,8 @@
         <input type="radio" id="female" name="gender" value="female">
         <label for="female">Female</label><br>
 		
-        <input type="radio" id="other" name="gender" value="other">
-        <label for="other">Other</label><br><br>
+       <!-- <input type="radio" id="other" name="gender" value="other">
+        <label for="other">Other</label><br><br>-->
         
         <label for="laptop">Laptop Brands</label><br>
         <select id="laptop" name="laptop">
