--- a/main.html
+++ b/main.html
@@ -39,8 +39,8 @@
         <label for="password">Password*</label>
         <input type="password input" id="password" name="password" required><br><br>
         
-        <label for="portfolio">Portfolio URL*</label>
-        <input type="url input" id="portfolio" name="portfolio"><br><br>
+        <label for="portfolio url">Portfolio URL*</label>
+        <input type="url" id="portfolio url" name="portfolio"><br><br>
         
         <button type="submit">Submit</button>
     </form>
