--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
         <label for="male">Male</label><br>
 		
         <input type="radio" id="female" name="gender" value="female">
-        <label for="female">Female</label><br>
+        <label for="female">Female</label><br></br>
 		
        <!-- <input type="radio" id="other" name="gender" value="other">
         <label for="other">Other</label><br><br>-->
