--- a/main.html
+++ b/main.html
@@ -39,7 +39,7 @@
         <label for="password">Password*</label>
         <input type="password input" id="password" name="password" required><br><br>
         
-        <label for="portfolio url">Portfolio URL*</label>
+        <label for="portfolio">Portfolio URL*</label>
         <input type="portfolio" id="portfolio" name="portfolio"><br><br>
         
         <button type="submit">Submit</button>
