--- a/main.html
+++ b/main.html
@@ -40,7 +40,7 @@
         <input type="password input" id="password" name="password" required><br><br>
         
         <label for="portfolio">Portfolio URL*</label>
-        <input type="portfolio" id="portfolio" name="portfolio"><br><br>
+        <input type="url input" id="portfolio" name="portfolio"><br><br>
         
         <button type="submit">Submit</button>
     </form>
